# matter_sdk

./: .gitattributes  .gitignore  .gitmodules  BUILD.gn  README.md
.devcontainer/: RT582_Dockerfile
.github/actions/bootstrap/: action.yaml
.github/actions/bootstrap-cache/: action.yaml
.github/actions/build-example/: action.yaml
.github/actions/checkout-submodules/: action.yaml
.github/actions/checkout-submodules-and-bootstrap/: action.yaml
.github/actions/upload-bootstrap-logs/: action.yaml
.github/workflows/: blank.yml  examples-linux.yml  test_create_issue.yml
build_overrides/: mbedtls.gni  rt582_sdk.gni
config/common/cmake/: chip_gn_args.cmake
docs/guides/: BUILDING.md
docs/guides/rafael/: Build.md  Build1.md  Debugger.md  ISP1.png:Zone.Identifier  ISP3.png:Zone.Identifier  ISP4.png:Zone.Identifier  ISP5.png:Zone.Identifier  flash_application.md  (+11 more)
examples/build_overrides/: mbedtls.gni  ot_rt582.gni  ot_rt58x.gni  rt582_sdk.gni  rt58x_sdk.gni
examples/light-switch-app/rt582/: BUILD.gn  args.gni
examples/light-switch-app/rt582/include/: AppEvent.h  AppTask.h  CHIPProjectConfig.h
examples/light-switch-app/rt582/src/: AppTask.cpp  BindingHandler.cpp  LightSwitchMgr.cpp  ZclCallbacks.cpp  main.cpp
examples/lighting-app/rt582/: BUILD.gn  README.md  args.gni
examples/lighting-app/rt582/include/: AppConfig.h  AppEvent.h  AppTask.h  CHIPProjectConfig.h  LightingManager.h
examples/lighting-app/rt582/src/: AppTask.cpp  LightingManager.cpp  ZclCallbacks.cpp  init_lighting_rt582Platform.cpp  main.cpp
examples/lighting-app/rt582/zap/: BUILD.gn
examples/lighting-app/rt582/zap/test/: endpoint_config.h
examples/platform/rt582/: BUILD.gn  BaseApplication.cpp  BaseApplication.h  FreeRTOSConfig.h  ICDSubscriptionCallback.cpp  ICDSubscriptionCallback.h  OTAConfig.cpp  OTAConfig.h  cmd_rafael.cpp  heap_4_rt582.c  heap_4_rt582.h  init_rt582Platform.cpp  init_rt582Platform.h  matter_config.cpp  matter_config.h  matter_shell.cpp  uart.cpp
examples/platform/rt582/config/: FreeRTOSConfig.h
examples/platform/rt582/ldscript/: rt58x.ld
examples/platform/rt582/projcrt_peripheral/light_switch_app/: init_light_switch_app_rt582Platform.cpp  init_light_switch_app_rt582Platform.h
examples/platform/rt582/projcrt_peripheral/lighting_app/: init_lighting_rt582Platform.cpp  init_lighting_rt582Platform.h
examples/platform/rt582/projcrt_peripheral/lock_app/: init_lock_app_rt582Platform.cpp  init_lock_app_rt582Platform.h
examples/platform/rt582/projcrt_peripheral/smart-plug-app/: init_smart-plug-app_rt582Platform.h
examples/platform/rt582/projcrt_peripheral/thermostat/: init_thermostat_rt582Platform.h
examples/platform/rt582/projcrt_peripheral/window_app/: init_window_rt582Platform.cpp  init_window_rt582Platform.h
examples/platform/rt582/project_include/: OpenThreadConfig.h
examples/platform/rt58x/: BUILD.gn  BaseApplication.cpp  BaseApplication.h  FreeRTOSConfig.h  OTAConfig.h  SubscriptionCallback.cpp  SubscriptionCallback.h  cmd_rafael.cpp  heap_4_rt58x.c  heap_4_rt58x.h  init_rt58xPlatform.cpp  init_rt58xPlatform.h  matter_config.cpp  matter_config.h  matter_shell.cpp  uart.cpp
examples/platform/rt58x/ldscript/: rt58x.ld
examples/platform/rt58x/project_include/: OpenThreadConfig.h
examples/thermostat/rt58x/: BUILD.gn
examples/thermostat/rt58x/include/: AppEvent.h  AppTask.h  CHIPProjectConfig.h  TemperatureManager.h  init_thermostat_rt58xPlatform.h
examples/thermostat/rt58x/src/: AppTask.cpp  TemperatureManager.cpp  ZclCallbacks.cpp  init_thermostat_rt58xPlatform.cpp  main.cpp
rafael_docs/: Build1.md  RT58x_Matter_SDK_Application_Note.md  Rafael_App_Development.md  Rafael_App_File_Structure.md  Rafael_BLE_Multi_Control_Guide.md  Rafael_Factory_Data.md  Rafael_Peripheral_SDK.md  Rafael_Software_Update.md  commissioning.md  flash_application.md  linux_macos_setup.md  matter_env_setup.md  matter_over_thread_overview.md  windows_setup.md
scripts/: constraints.txt  requirements.txt
scripts/examples/: gn_rt582_example.sh  gn_rt58x_example.sh
scripts/setup/: constraints.txt  requirements.esp32.txt  requirements.txt
scripts/workflow/: create_issue.py
src/: BUILD.gn
src/app/: ota_image_tool.py  rafael_ota_tool.py
src/credentials/: GroupDataProviderImpl.cpp
src/crypto/: CHIPCryptoPAL.cpp  CHIPCryptoPAL.h  CHIPCryptoPALmbedTLS.cpp
src/lwip/: BUILD.gn
src/messaging/: ReliableMessageMgr.cpp  ReliableMessageProtocolConfig.h
src/platform/: BUILD.gn  device.gni
src/platform/RT582/: BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  BlePlatformConfig.h  CHIPDevicePlatformConfig.h  CHIPMem-Platform.cpp  CHIPPlatformConfig.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  DeviceNetworkProvisioningDelegateImpl.cpp  DeviceNetworkProvisioningDelegateImpl.h  DiagnosticDataProviderImpl.cpp  FactoryDataParser.c  FactoryDataParser.h  FactoryDataProvider.cpp  FactoryDataProvider.h  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  Logging.cpp  OTAImageProcessorImpl.cpp  OTAImageProcessorImpl.h  PlatformManagerImpl.cpp  PlatformManagerImpl.h  RT582Config.cpp  RT582Config.h  ThreadStackManagerImpl.cpp  args.gni  fota_define.h  rt582-chip-mbedtls-config.h
src/platform/RT58x/: BLEManagerImpl.cpp  BLEManagerImpl.h  BLEManagerImpl_Multicontrol.cpp  BUILD.gn  CHIPDevicePlatformEvent.h  CHIPMem-Platform.cpp  CHIPPlatformConfig.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  DeviceNetworkProvisioningDelegateImpl.cpp  DiagnosticDataProviderImpl.cpp  DiagnosticDataProviderImpl.h  FactoryDataParser.h  FactoryDataProvider.cpp  KeyValueStoreManagerImpl.cpp  Logging.cpp  OTAImageProcessorImpl.cpp  OTAImageProcessorImpl.h  PlatformManagerImpl.cpp  RT58xConfig.cpp  RT58xConfig.h  RafaelMultiControl.cpp  RafaelMultiControl.h  SystemPlatformConfig.h  ThreadStackManagerImpl.h  args.gni  rt58x-chip-mbedtls-config.h
src/system/: BUILD.gn
zzz_generated/RT_Light/: endpoint_config.h  gen_config.h
zzz_generated/RT_Switch/: IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
(+283 files in other folders)
