# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")
import("//build_overrides/rt582_sdk.gni")
import("//build_overrides/pigweed.gni")

import("${chip_root}/examples/platform/rt582/args.gni")
import("${chip_root}/src/crypto/crypto.gni")

# ARM architecture flags will be set based on silabs_family.
arm_platform_config = "${rt582_sdk_build_root}/rt582_arm.gni"

mbedtls_target = "${chip_root}/third_party/rafael:mbedtls"
openthread_external_mbedtls = mbedtls_target

# default to platform crypto implementation but allow commandline override
if (chip_crypto == "") {
  #chip_crypto = "platform"
  chip_crypto = "mbedtls"
}

chip_device_platform = "rt582"

#Net work configuration OpenThread
lwip_platform = "rt582"
chip_mdns = "platform"
chip_inet_config_enable_ipv4 = false
chip_inet_config_enable_tcp_endpoint = false
chip_inet_config_enable_udp_endpoint = true
chip_system_config_use_open_thread_inet_endpoints = true
chip_with_lwip = false
optimize_debug_level = "s"

chip_build_tests = false

chip_enable_openthread = true
openthread_root = "${chip_root}/third_party/openthread/ot-rt582/openthread"

openthread_core_config_platform_check_file = ""

openthread_project_core_config_file = "OpenThreadConfig.h"

openthread_core_config_deps = [ "${chip_root}/examples/platform/rt582:openthread_core_config_rt582_chip_examples" ]

chip_config_memory_management = "platform"

pw_build_LINK_DEPS = [
  "$dir_pw_assert:impl",
  "$dir_pw_log:impl",
]
